// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`findAndTag should construct a highlight array from the offset array 1`] = `
Array [
  Object {
    "isEntity": false,
    "text": "",
  },
  Object {
    "confidence": 0.1,
    "endOffset": 3,
    "isEntity": true,
    "startOffset": 0,
    "text": "the",
  },
  Object {
    "isEntity": false,
    "text": " ",
  },
  Object {
    "confidence": 0.2,
    "endOffset": 7,
    "isEntity": true,
    "startOffset": 4,
    "text": "big",
  },
  Object {
    "isEntity": false,
    "text": " brown fox jumped ",
  },
  Object {
    "confidence": 0.3,
    "endOffset": 29,
    "isEntity": true,
    "startOffset": 25,
    "text": "over",
  },
  Object {
    "isEntity": false,
    "text": " the ",
  },
  Object {
    "confidence": 0.4,
    "endOffset": 39,
    "isEntity": true,
    "startOffset": 34,
    "text": "fence",
  },
  Object {
    "isEntity": false,
    "text": "",
  },
]
`;

exports[`findAndTag should construct and offsets array 1`] = `
Array [
  Object {
    "confidence": 0.1,
    "endOffset": 3,
    "startOffset": 0,
    "text": "the",
  },
  Object {
    "confidence": 0.2,
    "endOffset": 7,
    "startOffset": 4,
    "text": "big",
  },
  Object {
    "confidence": 0.3,
    "endOffset": 29,
    "startOffset": 25,
    "text": "over",
  },
  Object {
    "confidence": 0.4,
    "endOffset": 39,
    "startOffset": 34,
    "text": "fence",
  },
]
`;

exports[`findAndTag should run async as a worker 1`] = `
Array [
  Object {
    "confidence": 0.1,
    "endOffset": 3,
    "startOffset": 0,
    "text": "the",
  },
  Object {
    "confidence": 0.2,
    "endOffset": 7,
    "startOffset": 4,
    "text": "big",
  },
  Object {
    "confidence": 0.3,
    "endOffset": 29,
    "startOffset": 25,
    "text": "over",
  },
  Object {
    "confidence": 0.4,
    "endOffset": 39,
    "startOffset": 34,
    "text": "fence",
  },
]
`;
